# rogue-repo

./: .env.example  .gitignore  ASSUMED_BREACH_THREAT_MODEL.md  BACKLOG.md  CLAUDE.md  CODEOWNERS  Cargo.toml  Dockerfile  OWNERS.yaml  PROOF_OF_ARTIFACTS.md  README.md  TIMELINE_OF_INVENTION.md  railway.toml
.cursor/rules/: ai-slop-eradication.mdc  anti-patterns.mdc  ci-pipeline.mdc  jarvis.mdc  production-binary.mdc  test-binary.mdc  tokenization.mdc
.github/msi-workspace/: Cargo.toml
.github/workflows/: build-msi.yml
migrations/: 20250227000001_init.sql  20250228000001_auth.sql
rogue-repo/: Cargo.toml  RESEND_DNS.md  TRIPLE_SIMS_AUTH.md  TRIPLE_SIMS_PWA.md  TRIPLE_SIMS_TESTS.md  compression_map.md  pwa.css
rogue-repo/assets/: login.html  manifest.json  register.html  sw.js
rogue-repo/assets/apps/: null-terminal.html  rogue-runner.html
rogue-repo/assets/apps/rogue-runner-wasm/: index.html  rogue-runner.wasm
rogue-repo/src/: auth.rs  downloads.rs  lib.rs  main.rs  pwa.rs  routes.rs  tests.rs
rogue-repo/src/ledger/: error.rs  ledger.rs  mod.rs
rogue-repo/src/switch/: error.rs  iso8583.rs  mod.rs  stripe.rs  tcp.rs
rogue-repo/src/tests/: http.rs  integration.rs  unit.rs
rogue-repo/src/vault/: error.rs  mod.rs  vault.rs
rogue-runner/: CODE_SIGNING.md  Cargo.toml  GAME_DELIVERY_PLAN.md  README.md
rogue-runner/scripts/: build-android.sh  build-ios-sim.sh  build-msi.ps1  build-web.sh  build-windows.sh
rogue-runner/src/: lib.rs  main.rs
rogue-runner/web/: index.html
rogue-runner/wix/: main.wxs
scripts/: build-release.sh  restart-roguerepo.sh  run-with-approuter.sh
