# Copyright (c) 2026 The Cochran Block, LLC (Pending). All rights reserved.
# Contributors: GotEmCoach, KOVA, Claude Opus 4.6, SuperNinja, Composer 1.5, Google Gemini Pro 3
[workspace]
resolver = "2"
members = ["rogue-repo", "rogue-runner"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true
