# Unlicense — public domain — cochranblock.org
# Contributors: GotEmCoach, KOVA, Claude Opus 4.6, SuperNinja, Composer 1.5, Google Gemini Pro 3
[workspace]
resolver = "2"
members = ["rogue-repo", "rogue-runner"]

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[profile.diamond]
inherits = "release"
opt-level = 3              # maximum LLVM speed
lto = "fat"                # cross-crate inlining, full monomorphized dedup
codegen-units = 1          # one crystal, no fracture planes
strip = true               # symbols don't run, they just ride along
panic = "abort"            # cull unwinding machinery
overflow-checks = false    # trust the arithmetic, check explicitly when needed
debug = false              # DWARF is heavy
incremental = false        # incremental caches are fracture planes
split-debuginfo = "off"    # no separate .dSYM or .pdb
