# Copyright (c) 2026 The Cochran Block. All rights reserved.
[package]
name = "rogue-repo"
version = "0.1.0"
edition = "2021"
description = "Rogue Repo — HTTP API for roguerepo.io"

[features]
default = []
tests = ["exopack"]

[lib]
name = "rogue_repo"
path = "src/lib.rs"

[[bin]]
name = "rogue-repo"
path = "src/main.rs"

[[bin]]
name = "rogue-repo-test"
path = "src/bin/rogue-repo-test.rs"
required-features = ["tests"]

[dependencies]
axum = { version = "0.7", features = ["json"] }
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
argon2 = "0.5"
base64 = "0.22"
hmac = "0.12"
sha2 = "0.10"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
rust-embed = { version = "8", features = ["compression"] }
mime_guess = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "compression-deflate"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
aes-gcm = "0.10"
bitvec = "1.0"
bytes = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "uuid", "chrono"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
approuter = { path = "../../approuter", features = ["client"] }
reqwest = { version = "0.11", features = ["json"] }
dotenvy = "0.15"
exopack = { path = "../../kova/exopack", optional = true, features = ["triple_sims"] }
