# Copyright (c) 2026 The Cochran Block. All rights reserved.
[package]
name = "rogue-runner"
version = "0.1.0"
edition = "2021"
description = "Rogue Runner — 1000-level endless runner, cross-platform"

[features]
default = []
tests = ["exopack"]

[lib]
name = "rogue_runner"
path = "src/lib.rs"

[[bin]]
name = "rogue-runner"
path = "src/main.rs"

[[bin]]
name = "rogue-runner-test"
path = "src/bin/rogue-runner-test.rs"
required-features = ["tests"]

[dependencies]
macroquad = "0.4"
exopack = { path = "../../kova/exopack", optional = true, features = ["triple_sims"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Storage", "StorageEvent"] }

[package.metadata.android]
build_targets = ["armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android"]
version_code = 1
version_name = "0.1.0"
activity_attributes = { "android:exported" = "true", "android:screenOrientation" = "userLandscape" }
